force-app/packaged/main/default/objects/Provisioning_Request__c/Provisioning_Request__c.object-meta.xml
<CustomObject>
    <label>Provisioning Request</label>
    <nameField>
        <displayFormat>PR-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provisioning Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>