force-app/packaged/main/default/objects/Provisioning_Request__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>3</length>
    <type>Text</type>
</CustomField>