force-app/packaged/main/default/objects/Provisioning_Request__c/fields/PreferredEdition__c.field-meta.xml
<CustomField>
    <fullName>PreferredEdition__c</fullName>
    <label>Preferred Edition</label>
    <length>80</length>
    <type>Text</type>
</CustomField>