force-app/packaged/main/default/objects/Provisioning_Request__c/fields/PreferredLanguage__c.field-meta.xml
<CustomField>
    <fullName>PreferredLanguage__c</fullName>
    <label>Preferred Language</label>
    <length>80</length>
    <type>Text</type>
</CustomField>