force-app/packaged/main/default/objects/Provisioning_Request__c/fields/SignupEmail__c.field-meta.xml
<CustomField>
    <fullName>SignupEmail__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>