force-app/packaged/main/default/objects/Provisioning_Request__c/fields/SignupRequest_Id__c.field-meta.xml
<CustomField>
    <fullName>SignupRequest_Id__c</fullName>
    <externalId>true</externalId>
    <label>Signup Request Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>