force-app/packaged/main/default/objects/Provisioning_Request__c/fields/Subdomain__c.field-meta.xml
<CustomField>
    <fullName>Subdomain__c</fullName>
    <label>Subdomain</label>
    <length>40</length>
    <type>Text</type>
</CustomField>