force-app/packaged/main/default/objects/Provisioning_Request__c/fields/TrialDays__c.field-meta.xml
<CustomField>
    <fullName>TrialDays__c</fullName>
    <defaultValue>365</defaultValue>
    <label>Trial Days</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>