force-app/packaged/main/default/objects/Provisioning_Request__c/fields/Trialforce_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Trialforce_Template_Id__c</fullName>
    <label>Trialforce Template Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>