force-app/packaged/main/default/objects/Provisioning_Request__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <label>Username</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>