force-app/packaged/main/default/objects/Provisioning_Request__c/validationRules/Org_Id_or_Company.validationRule-meta.xml
<ValidationRule>
    <fullName>Org_Id_or_Company</fullName>
    <active>true</active>
    <errorConditionFormula>Org_Id__c == null &amp;&amp; Company__c == null</errorConditionFormula>
    <errorDisplayField>Company__c</errorDisplayField>
    <errorMessage>Please enter a Company</errorMessage>
</ValidationRule>