force-app/packaged/main/default/objects/Provisioning_Request__c/validationRules/Org_Id_or_Country.validationRule-meta.xml
<ValidationRule>
    <fullName>Org_Id_or_Country</fullName>
    <active>true</active>
    <errorConditionFormula>Org_Id__c == null &amp;&amp; LEN(Country__c) &lt;&gt; 2</errorConditionFormula>
    <errorDisplayField>Country__c</errorDisplayField>
    <errorMessage>Please enter a Country (in the 2 character ISO-3166 country code format)</errorMessage>
</ValidationRule>