force-app/packaged/main/default/objects/Provisioning_Request__c/validationRules/Org_Id_or_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Org_Id_or_Email</fullName>
    <active>true</active>
    <errorConditionFormula>Org_Id__c == null &amp;&amp; SignupEmail__c == null</errorConditionFormula>
    <errorDisplayField>SignupEmail__c</errorDisplayField>
    <errorMessage>Please enter an Email</errorMessage>
</ValidationRule>