force-app/packaged/main/default/objects/Provisioning_Request__c/validationRules/Org_Id_or_LastName.validationRule-meta.xml
<ValidationRule>
    <fullName>Org_Id_or_LastName</fullName>
    <active>true</active>
    <errorConditionFormula>Org_Id__c == null &amp;&amp; LastName__c == null</errorConditionFormula>
    <errorDisplayField>LastName__c</errorDisplayField>
    <errorMessage>Please enter a Last Name</errorMessage>
</ValidationRule>