force-app/packaged/main/default/objects/Provisioning_Request__c/validationRules/Org_Id_or_Username.validationRule-meta.xml
<ValidationRule>
    <fullName>Org_Id_or_Username</fullName>
    <active>true</active>
    <errorConditionFormula>Org_Id__c == null &amp;&amp; Username__c == null</errorConditionFormula>
    <errorDisplayField>Username__c</errorDisplayField>
    <errorMessage>Please enter a Username</errorMessage>
</ValidationRule>