force-app/packaged/main/default/objects/Provisioning_Request__c/validationRules/Trialforce_Template_or_Org_Edition.validationRule-meta.xml
<ValidationRule>
    <fullName>Trialforce_Template_or_Org_Edition</fullName>
    <active>true</active>
    <errorConditionFormula>Trialforce_Template_Id__c = null  &amp;&amp; Edition__c = null  || 
        Trialforce_Template_Id__c &lt;&gt; null &amp;&amp; Edition__c &lt;&gt; null</errorConditionFormula>
    <errorMessage>Please select EITHER Trialforce Template or Edition</errorMessage>
</ValidationRule>