force-app/packaged/main/default/objects/Provisioning_Request__c/validationRules/Valid_OrgId.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_OrgId</fullName>
    <active>true</active>
    <errorConditionFormula>Org_Id__c != null &amp;&amp; (!BEGINS( Org_Id__c,&apos;00D&apos;) ||  LEN( Org_Id__c ) &lt;&gt; 15)</errorConditionFormula>
    <errorDisplayField>Org_Id__c</errorDisplayField>
    <errorMessage>Please enter a valid Org Id [00Dxxxxxxxxxxxx] (15 characters)</errorMessage>
</ValidationRule>