force-app/packaged/main/default/objects/Provisioning_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>Username__c</columns>
    <columns>Country__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>